gcc/testsuite/g++.dg/warn/pedantic2.C
// { dg-options "-pedantic" }

class foo
{
  foo() {};
  void bar() {};

  foo(int) {};;  // { dg-error "extra" }
  void bar(int) {};;  // { dg-error "extra" }
};
